[package]
name = "cdecao"
version = "0.4.0"
authors = ["Michael Thies <mail@mhthies.de>"]
edition = "2018"

[dependencies]
ndarray = "^0.15"
log = "^0.4"
env_logger = "^0.10"
num-traits = "^0.2"
ordered-float = "^3.0.0"
serde = { version = "^1.0.97", features = ["derive"] }
serde_json = "^1.0.40"
num_cpus = "^1.0"
clap = { version = "^4", features = ["cargo"] }
exitcode = "^1.1.2"
chrono = "^0.4"
reqwest = { version = "0.11", features = ["default-tls", "blocking", "json"] }

[dev-dependencies]
assert_float_eq = "^1.1.3"

[profile.release]
lto = true
